libbpf-tools: Add trapagg tool
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/src/Makefile
+++ b/Debugging/libbpf-tools/src/Makefile
@@ -9,10 +9,11 @@ INCLUDES := -I$(OUTPUT)
 CFLAGS := -g -Wall
 ARCH := $(shell uname -m | sed 's/x86_64/x86/')
 
-APPS = emadlatency emadump
+APPS = emadlatency emadump trapagg
 
 COMMON_OBJ = \
 	$(OUTPUT)/trace_helpers.o \
+	$(OUTPUT)/map_helpers.o \
 	#
 
 # Get Clang's default includes on this system. We'll explicitly add these dirs
@@ -77,7 +78,7 @@ $(OUTPUT)/%.o: %.c $(wildcard %.h) | $(OUTPUT)
 	$(Q)$(CC) $(CFLAGS) $(INCLUDES) -c $(filter %.c,$^) -o $@
 
 # Build application binary
-emadlatency: %: $(OUTPUT)/%.o $(LIBBPF_OBJ) $(COMMON_OBJ) | $(OUTPUT)
+emadlatency trapagg: %: $(OUTPUT)/%.o $(LIBBPF_OBJ) $(COMMON_OBJ) | $(OUTPUT)
 	$(call msg,BINARY,$@)
 	$(Q)$(CC) $(CFLAGS) $^ -lelf -lz -o $@
 
