libbpf-tools: Move common helpers to a dedicated directory
The following commits will add resmon, a tool for tracking resource usage
on a Spectrum switch. resmon consists of a daemon, a CLI interface, a BPF
program, and is more complex than the other libbpf-based tools. It will
therefore be in a separete directory, with its own Makefile. However it
will still want to reuse the common helpers.

In this patch, move the common helpers into a dedicated top-level
directory, add a Makefile, and have it build libcommon.a with the helper
objects.

Signed-off-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/Makefile
+++ b/Debugging/libbpf-tools/Makefile
@@ -2,7 +2,7 @@
 REL_SRCDIR := .
 include $(REL_SRCDIR)/common.mk
 
-DIRS = src
+DIRS = common src
 
 .PHONY: all
 all: $(DIRS:%=build-%)
@@ -13,7 +13,7 @@ build-%:
 .PHONY: clean
 clean: $(DIRS:%=clean-%)
 	$(call msg,CLEAN)
-	$(Q)rm -rf $(LIBBPF_OUTPUT) $(APPS)
+	$(Q)rm -rf $(LIBBPF_OUTPUT)
 
 clean-%:
 	$(Q)$(MAKE) -C $* clean
