resmon: Introduce a stats command
The resource monitor needs to be able to report to the user the consumption
of individual resources. To that end, introduce a "stats" CLI and RPC.
Since there are currently no actual gauges defined yet, nothing is
actually reported, and the response comes back blank (but valid).

Signed-off-by: Amit Cohen <amcohen@nvidia.com>
Co-developed-by: Danielle Ratson <danieller@nvidia.com>
Signed-off-by: Danielle Ratson <danieller@nvidia.com>
Co-developed-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/resmon/Makefile
+++ b/Debugging/libbpf-tools/resmon/Makefile
@@ -13,6 +13,7 @@ resmon-OBJECTS :=		\
 	$(OUTPUT)/resmon-d.o	\
 	$(OUTPUT)/resmon-jrpc.o	\
 	$(OUTPUT)/resmon-sock.o	\
+	$(OUTPUT)/resmon-stat.o	\
 	#
 SYSTEMD_UNITS :=				\
 	$(OUTPUT)/resmon.service		\
