resmon: Introduce an EMAD command
The resource monitor needs to parse the individual EMADs to determine which
resource they are pertaining to. There will be two sources of these EMADs:
for real usage, the in-kernel BPF scripts will feed them to resmon through
a ring buffer; for testing, the "mock" backend will allow injecting these
EMADs through the RPC.

In this patch, introduce the RPC-based API. Also introduce a new module,
resmon-reg, where register parsing will eventually be. Currently the module
only parses the overall EMAD structure.

Signed-off-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/resmon/Makefile
+++ b/Debugging/libbpf-tools/resmon/Makefile
@@ -12,6 +12,7 @@ resmon-OBJECTS :=		\
 	$(OUTPUT)/resmon-c.o	\
 	$(OUTPUT)/resmon-d.o	\
 	$(OUTPUT)/resmon-jrpc.o	\
+	$(OUTPUT)/resmon-reg.o	\
 	$(OUTPUT)/resmon-sock.o	\
 	$(OUTPUT)/resmon-stat.o	\
 	#
@@ -46,7 +47,7 @@ $(OUTPUT)/resmon: $(resmon-OBJECTS)
 	$(call msg,BINARY,$@)
 	$(Q)$(CC) $(CFLAGS) -lz $^ -o $@
 
-$(OUTPUT)/%.o: %.c resmon.h $(COMMON_OBJ) | $(OUTPUT)
+$(OUTPUT)/%.o: %.c resmon.h mlxsw.h $(COMMON_OBJ) | $(OUTPUT)
 	$(call msg,CC,$@)
 	$(Q)$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
 
