resmon: test.sh: Test RALUE register
Test resmon behavior using method "emad" which allows to send EMADs to
the daemon.

Send EMADs and verify that the appropriate gauges are updated.

The test can be started using "make test" in the resmon subdirectory, which
verifies that resmon was already compiled, and if not, compiles it before.

"make resmon/test" in the top-level directory runs the test as well by way
of the usual dispatch rules. A new top-level target, "test", has been added
as well, which now dispatches to resmon/test (but is meant to collect more
targets as those become available).

Signed-off-by: Amit Cohen <amcohen@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/Makefile
+++ b/Debugging/libbpf-tools/Makefile
@@ -16,6 +16,12 @@ install: install-resmon
 install-%:
 	$(Q)$(MAKE) -C $* install
 
+.PHONY: test
+test: test-resmon
+
+test-%:
+	$(Q)$(MAKE) -C $* test
+
 .PHONY: clean
 clean: $(DIRS:%=clean-%)
 	$(call msg,CLEAN)
