resmon: Introduce HW backend
The HW backend will expect that resmon is running on a Spectrum-type
machine and will install BPF to capture interesting EMADs, and probe
devlink to discover resource pool size.

In this patch, introduce a new module, devlink-dl, which handles the
devlink interface. Further introduce the HW backend, and implement the
get_capacity callback that dispatches to the devlink-dl module.

The new backend is not accessible at this point yet.

Signed-off-by: Danielle Ratson <danieller@nvidia.com>
Co-developed-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/resmon/Makefile
+++ b/Debugging/libbpf-tools/resmon/Makefile
@@ -11,6 +11,7 @@ resmon-OBJECTS :=		\
 	$(OUTPUT)/resmon-back.o	\
 	$(OUTPUT)/resmon-c.o	\
 	$(OUTPUT)/resmon-d.o	\
+	$(OUTPUT)/resmon-dl.o	\
 	$(OUTPUT)/resmon-jrpc.o	\
 	$(OUTPUT)/resmon-reg.o	\
 	$(OUTPUT)/resmon-sock.o	\
@@ -52,7 +53,8 @@ $(OUTPUT):
 	$(call msg,MKDIR,$@)
 	$(Q)mkdir -p $@
 
-$(OUTPUT)/resmon: CFLAGS += $(shell pkgconf --libs libelf json-c libsystemd)
+$(OUTPUT)/resmon: CFLAGS += $(shell pkgconf --libs libelf json-c libsystemd \
+				libnl-3.0 libnl-genl-3.0)
 $(OUTPUT)/resmon: $(resmon-OBJECTS)
 	$(call msg,BINARY,$@)
 	$(Q)$(CC) $(CFLAGS) -lz $^ -o $@
@@ -63,6 +65,9 @@ $(OUTPUT)/%.o: %.c resmon.h mlxsw.h $(COMMON_OBJ) | $(OUTPUT)
 
 $(OUTPUT)/resmon.o: $(OUTPUT)/config.h
 $(OUTPUT)/resmon.o: INCLUDES += -I$(OUTPUT)
+
+$(OUTPUT)/resmon-dl.o: INCLUDES += $(shell pkgconf --cflags libnl-3.0 \
+				     libnl-genl-3.0)
 
 $(OUTPUT)/%: %.in | $(OUTPUT)
 	$(call msg,SED,$*)
