resmon: Introduce the BPF interface
To be able to analyze the EMADs, they need to be transported to the
user-space. In this patch, resmon installs a BPF program hooked to the
devlink_hwmsg tracepoint. This program does a shallow dissection of the
EMADs just to discover what register they carry, and if an interesting one,
it pushes it to the BPF ring buffer, whence the daemon picks it up for
further processing. As a multiple-producer, single-consumer ring buffer,
the BPF ring buffer avoids re-ordering problems.

The ring buffer is represented by a file descriptor that it is possible to
poll on. Introduce a resmon_back API to yield the descriptor, so that the
resmon_d_loop() can incorporate and poll on it. Also introduce an activity
callback, invoked when the poll indicates the backend FD has data to read.
This then dispatches the read EMADs to the EMAD dissection introduced in
the previous patches.

The HW backend is made accessible and resmon default at this point.
Invoking the mock backend can be done through the "resmon start mode mock".

Signed-off-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/resmon/Makefile
+++ b/Debugging/libbpf-tools/resmon/Makefile
@@ -5,6 +5,8 @@ include $(REL_SRCDIR)/common.mk
 
 OUTPUT := .output
 INCLUDES := $(COMMON_INCLUDE)
+CFLAGS := -g -Wall
+
 APPS := resmon
 resmon-OBJECTS :=		\
 	$(OUTPUT)/resmon.o	\
@@ -22,6 +24,8 @@ SYSTEMD_UNITS :=				\
 	#
 EXTRA_CLEAN :=			\
 	$(OUTPUT)/config.h	\
+	$(OUTPUT)/resmon.bpf.o	\
+	$(OUTPUT)/resmon.skel.h	\
 	#
 TESTS :=		\
 	test.sh		\
@@ -55,7 +59,7 @@ $(OUTPUT):
 
 $(OUTPUT)/resmon: CFLAGS += $(shell pkgconf --libs libelf json-c libsystemd \
 				libnl-3.0 libnl-genl-3.0)
-$(OUTPUT)/resmon: $(resmon-OBJECTS)
+$(OUTPUT)/resmon: $(resmon-OBJECTS) $(LIBBPF_OBJ) $(COMMON_OBJ)
 	$(call msg,BINARY,$@)
 	$(Q)$(CC) $(CFLAGS) -lz $^ -o $@
 
@@ -68,6 +72,19 @@ $(OUTPUT)/resmon.o: INCLUDES += -I$(OUTPUT)
 
 $(OUTPUT)/resmon-dl.o: INCLUDES += $(shell pkgconf --cflags libnl-3.0 \
 				     libnl-genl-3.0)
+
+$(OUTPUT)/resmon.bpf.o: INCLUDES += $(LIBBPF_INCLUDE)
+$(OUTPUT)/resmon.bpf.o: resmon.bpf.c resmon.h ../common/vmlinux.h
+	$(call msg,BPF,$@)
+	$(Q)$(CLANG) -g -O2 -target bpf -D__TARGET_ARCH_$(ARCH) $(INCLUDES) $(CLANG_BPF_SYS_INCLUDES) -c $< -o $@
+	$(Q)$(LLVM_STRIP) -g $@ # strip useless DWARF info
+
+$(OUTPUT)/resmon-back.o: INCLUDES += $(LIBBPF_INCLUDE) -I$(OUTPUT)
+$(OUTPUT)/resmon-back.o: $(OUTPUT)/resmon.skel.h
+
+%.skel.h: %.bpf.o
+	$(call msg,GEN-SKEL,$@)
+	$(Q)$(BPFTOOL) gen skeleton $< > $@
 
 $(OUTPUT)/%: %.in | $(OUTPUT)
 	$(call msg,SED,$*)
