resmon: Add documentation
Signed-off-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/Makefile
+++ b/Debugging/libbpf-tools/Makefile
@@ -22,6 +22,12 @@ test: test-resmon
 test-%:
 	$(Q)$(MAKE) -C $* test
 
+.PHONY: doc
+doc: doc-resmon
+
+doc-%:
+	$(Q)$(MAKE) -C $* doc
+
 .PHONY: clean
 clean: $(DIRS:%=clean-%)
 	$(call msg,CLEAN)
