libbpf-tools: common: Makefile: Fix ar invocation
Invocation of `ar' is done directly, istead of dispatching through $(Q) to
hnadle the case of a quiet build. Fix in an obvious manner.

Signed-off-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/common/Makefile
+++ b/Debugging/libbpf-tools/common/Makefile
@@ -13,7 +13,8 @@ libcommon.a-OBJECTS := \
 all: $(OUTPUT)/libcommon.a
 
 $(OUTPUT)/libcommon.a: $(libcommon.a-OBJECTS)
-	ar cr $@ $^
+	$(call msg,AR,$@)
+	$(Q)ar cr $@ $^
 
 $(OUTPUT):
 	$(call msg,MKDIR,$@)
