libbpf-tools: Build with -Wunused
Let's have warnings about defined but not used functions.

Signed-off-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/resmon/Makefile
+++ b/Debugging/libbpf-tools/resmon/Makefile
@@ -5,7 +5,7 @@ include $(REL_SRCDIR)/common.mk
 
 OUTPUT := .output
 INCLUDES := $(COMMON_INCLUDE)
-CFLAGS := -g -Wall
+CFLAGS := -g -Wall -Wunused
 
 APPS := resmon resmon-exporter
 resmon-OBJECTS :=		\
