resmon: Add man page for the dump suite
Describe the new interfaces in the man pages.

Signed-off-by: Petr Machata <petrm@nvidia.com>
Signed-off-by: Ido Schimmel <idosch@nvidia.com>

--- a/Debugging/libbpf-tools/resmon/Makefile
+++ b/Debugging/libbpf-tools/resmon/Makefile
@@ -39,6 +39,7 @@ MAN_PAGES :=				\
 	$(OUTPUT)/resmon-ping.8		\
 	$(OUTPUT)/resmon-stats.8	\
 	$(OUTPUT)/resmon-emad.8		\
+	$(OUTPUT)/resmon-dump.8		\
 	#
 
 BUILT := $(APPS) $(SYSTEMD_UNITS) $(MAN_PAGES)
